...
  ///
  ///
  @override
  Widget build(BuildContext context) {
    Map<String, Map<String, dynamic>> cards = {
      'Following'.i18n: {
        'key': Key('followingCard'),
        'qtd': widget.user.following ?? 0,
        'onTap': () => Navigator.of(context).push(
              MaterialPageRoute(
                builder: (context) => FollowList(
                  title: 'Following'.i18n,
                  provider: UserFollowingProvider(
...
                  ),
                ),
              ),
            ),
      },
      'Followers'.i18n: {
        'key': Key('followersCard'),
        'qtd': widget.user.followers ?? 0,
        'onTap': () => Navigator.of(context).push(
              MaterialPageRoute(
                builder: (context) => FollowList(
                  title: 'Followers'.i18n,
                  provider: UserFollowersProvider(
...
