...
                    /// login
                    case Status.login:
                      return ColumnMessage(
                        message: 'You must log in to GitHub.'.i18n,
                        extras: [
                          RaisedButton(
                            key: Key('loginBtn'),
                            child: Text('Let\'s go'.i18n),
                            onPressed: _login,
                          ),
                        ],
                      );

...
